Volumes declared in previous images don't support modification so overwrite file...

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,4 @@
 FROM pocconsortium/burstcoin:2-h2
 
 # Setup reward address
-#CMD sed -i 's/P2P.myPlatform = PC/P2P.myPlatform = BURST-KBEX-RF89-ANRL-89PAG/g' /conf/brs-default.properties
-COPY brs.properties /conf/additional.brs.properties
-RUN  cat /conf/additional.brs.properties >> /conf/brs.properties
-
+COPY brs.properties /conf/brs.properties
