--- a/docker/brs.properties
+++ b/docker/brs.properties
@@ -1,3 +1,19 @@
+#### Following data is from brs.properties.h2 in conf/ folder in repo ####
+#### API SERVER ####
+API.Listen = 0.0.0.0
+API.allowed = *
+
+#### DATABASE ####
+
+# Database connection JDBC url
+# Append ;AUTO_SERVER=TRUE to enable automatic mixed mode access.
+DB.Url=jdbc:h2:file:/db/burst;DB_CLOSE_ON_EXIT=FALSE
+DB.Username=
+DB.Password=
+
+
+
+#### Following data was added by me for burst reward ####
 P2P.myPlatform = BURST-KBEX-RF89-ANRL-89PAG
 P2P.MaxConnections = 40
 
